fixed text shadows clipping and others

--- a/MonokaiPane/css/style.css
+++ b/MonokaiPane/css/style.css
@@ -3,9 +3,6 @@
     font-family: arialRoundedBold;
     src: url(arlrdbd.ttf);
 }
-body{
-  background: rgb(49, 49, 49);
-}
 :root{
   font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
@@ -21,14 +18,15 @@ body{
 #everything{
   position: relative;
   margin: 2rem;
-  width: calc(var(--con-width) + 0.5rem);
-  height: calc(var(--con-height) + 0.75rem);
+  width: var(--con-width);
+  height: calc(var(--con-height) + 0.25rem);
   overflow: hidden;
 }
 #bodycontainer{
+  border-top: 0.25rem solid var(--color-bg2);
   width: var(--con-width);
   height: var(--con-height);
-  overflow: hidden;
+  overflow: visible;
   position: relative;
 }
 #bg{
@@ -42,7 +40,9 @@ body{
 .darkbg{
   width: var(--con-width);
   height: var(--con-height);
-  background: linear-gradient(to bottom, black 0%, #0000002f 70%);
+  /* box-shadow: inset 0 0 5rem 2rem black; */
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 40%, rgba(0, 0, 0, 0.3) 60% , rgba(0, 0, 0, 0.8) 100%);
+  /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.2) 70%); */
 }
 #infoContainer{
   position: absolute;
@@ -55,6 +55,7 @@ body{
   transition: 300ms;
 }
 .title{
+  padding-bottom: 0.2rem;
   text-align: center;
   white-space: nowrap;
   position: relative;
@@ -67,13 +68,15 @@ body{
   mask-image: linear-gradient(to right, transparent 10%, black 20%,black 80%, transparent 90%);
 }
 .artist{
+  margin-top: -0.2rem;
+  padding-bottom: 0.15rem;
   text-align: center;
   white-space: nowrap;
   position: relative;
   color:white;
   font-weight: 400;
   font-size: 1rem;
-  text-shadow: 0 0.125rem 0.125rem black;
+  text-shadow: 0 0.075rem 0.125rem black;
   width: 100%;
   -webkit-mask-image: linear-gradient(to right, transparent 10%, black 20%,black 80%, transparent 90%);
   mask-image: linear-gradient(to right, transparent 10%, black 20%,black 80%, transparent 90%);
@@ -95,7 +98,8 @@ body{
   overflow: hidden;
   background: var(--color-bg);
   padding: 0.3rem 0.5rem 0.3rem 0;
-  border-left: 0.25rem solid var(--color-bg2);
+  border-left: 0.2rem solid var(--color-bg2);
+  border-right: 0.2rem solid var(--color-bg2);
   display: inline-block;
   box-shadow: 0 0  0.25rem #242424;
 }
@@ -155,8 +159,8 @@ body{
   background: var(--color-bg);
   transform: translateY(calc(100% - 0.25rem)); 
   z-index: 10;
-  padding-top: 0.1rem;
-  padding-bottom:  0.35rem;
+  padding-top: 0.2rem;
+  padding-bottom:  0.2rem;
   justify-content: center;
 }
 .hitdoublecontainer{
@@ -181,10 +185,6 @@ body{
   color: white;
 }
 
-.hitcontainer>span{
-  position: relative;
-  font-size: 1.5rem;
-}
 .pptext{
   font-weight: 400;
   margin-left: 0.1rem;
@@ -207,5 +207,6 @@ body{
   color: #ff6188;
 }
 .hitcontainer>.odometer{
+  font-size: 1.5rem;
   top: -0.25rem;
 }
